--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
 
         <!-- Logback -->
         <dependency>
