--- a/pom.xml
+++ b/pom.xml
@@ -195,5 +195,11 @@
             <version>6.8.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+
     </dependencies>
 </project>
