--- a/pom.xml
+++ b/pom.xml
@@ -201,5 +201,8 @@
             <version>${org.springframework-version}</version>
         </dependency>
 
+        <dependency> <groupId>org.springframework</groupId> <artifactId>spring-context-support</artifactId> <version>${org.springframework-version}</version> </dependency>
+        <dependency> <groupId>com.sun.mail</groupId> <artifactId>javax.mail</artifactId> <version>1.5.6</version> </dependency>
+
     </dependencies>
 </project>
